--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TITLE:  Wedding - 100% Fully Responsive Free HTML5 Bootstrap Template",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "serve"
   },
   "author": "",
   "license": "ISC",
